Fix silly window margin on mobile

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -671,7 +671,7 @@
 
 	@media only screen and (max-width: 720px) {
 		float: none;
-		margin: 0 auto;
+		margin: 1rem auto 0;
 	}
 }
 
